--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "axios": "^1.9.0",
+    "framer-motion": "^12.12.1",
     "maath": "^0.10.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
